exemple file istio/gateway-istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gestionstock-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gestionstock-gateway-vs
spec:
  hosts:
  - "*"
  gateways:
  - gestionstock-gateway
  http:
  - name: frontend-vs
    match:
    - uri:
        prefix: /
    route:
    - destination:
        host: service-frontend
        port:
          number: 8080
